update commit message

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.9",
+    "@clerk/nextjs": "^6.35.0",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -50,7 +50,7 @@
     "escpos-buffer": "^3.0.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
-    "next": "14.2.25",
+    "next": "^14.2.33",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^18",
