--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,46 @@ services:
     name: murimi-pos
     env: node
     plan: free
-    buildCommand: npm ci && npm run build
-    startCommand: npm start
+    buildCommand: |
+      npm ci
+      npx prisma generate
+      npm run build
+    startCommand: npm run start
     nodeVersion: 22.16.0
     autoDeploy: true
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: DATABASE_URL
+        fromDatabase:
+          name: murimi-pos-db
+          property: connectionString
+      - key: PORT
+        value: 10000
+      - key: NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+        sync: false
+      - key: CLERK_SECRET_KEY
+        sync: false
+      - key: NEXT_PUBLIC_CLERK_SIGN_IN_URL
+        value: /sign-in
+      - key: NEXT_PUBLIC_CLERK_SIGN_UP_URL
+        value: /sign-up
+      - key: NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL
+        value: /dashboard
+      - key: NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL
+        value: /dashboard
+      - key: M_PESA_CONSUMER_KEY
+        sync: false
+      - key: M_PESA_CONSUMER_SECRET
+        sync: false
+      - key: EMAIL_USER
+        sync: false
+      - key: EMAIL_PASS
+        sync: false
+      - key: FRONTEND_URL
+        value: https://murimi-pos.onrender.com
+      - key: CORS_ORIGIN
+        value: https://murimi-pos.onrender.com
+
+databases:
+  - name: murimi-pos-db
